--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
 
+    <dimen name="icon_size">36dp</dimen>
+    <dimen name="pb_width">144dp</dimen>
 </resources>
